priemr commit: contact y footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrega 3</title>
+    <title>Entrega 4</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-                                <!-- Hero -->
+                                <!-- Section 1: Hero -->
         <section id="hero">
             <div class="hero-info-container">
                 <div class="hero-info">
@@ -72,11 +72,87 @@
 
         </section>
 
+                                 <!-- Section 2: Landing page-->
+          <section id="landing">
+            <h2>Compartí tus ideas y nosotros las hacemos realidad</h2>
+            <div class="landing-cards-container">
+                <div class="landing-card">
+                    <img src="assets/varita.png" alt="">
+                    <h3>Descubrí nuestras figuras</h3>
+                    <p>
+                        En nuestra página podes encontrar figuras de tus personajes favoritos. 
+                        Desde sagas como <span>Harry Potter </span>, <span>Animales fantásticos      
+                        </span> <span>Star Wars</span>, entre muchas otras.
+                    </p>
+                </div>
+                <div class="landing-card">
+                    <img src="assets/varita.png" alt="">
+                    <h3>¡Envianos tus ideas!</h3>
+                    <p>
+                        Al igual que vos, somos fanáticos de los funkos y amamos ver a nuestros personajes favoritos
+                        en nuestras casas. Para hacerlo posible, podes enviarnos tu figura 3D y nosotros la hacemos realidad.
+                    </p>
+                </div>
+                <div class="landing-card">
+                    <img src="assets/varita.png" alt="">
+                    <h3>Coleccionalos</h3>
+                    <p>
+                        Completá tu escritorio, biblioteca, estanterías o cualquier lugar de tu casa con tus colecciones preferidas.
+                    </p>
+                </div>
+            </div>
+        </section>
+        
 
+                <!-- contact -->
+        <section id="contact">
+            <div class="contact-container">
+                <h2>¡Contactanos!</h2>
+                <div class="contact">
+                    <p>📌 Buenos Aires, Argentina</p>
+                    <p>📍 Número 4 de Privet Drive</p>
+                    <p>📩 3Dcompany@gmail.com</p>
+                    <p>📲 221 93493443</p>
+                </div>
+            </div>
+
+            <div class="images">
+                <img src="assets/Figuras 3D/Harry/Harry-principal.jpg" alt="">
+                <img src="assets/Figuras 3D/Hermione/Hermione1.jpg" alt="">
+                <img src="assets/Figuras 3D/Ron/Ron-1.jpg" alt="">
+                <img src="assets/Figuras 3D/Newt.jpg" alt="">
+            </div>
+            </div>
+
+        </section>
 
 </main>
     
+<footer>
+    <section id="icons">
+        <div class="icons">
+            <a href="#" class="icon icon--instagram"> <img src="assets/redes/instagram.png" alt="">
+              <i class="ri-instagram-line"></i>
+            </a>
+            <a href="#" class="icon icon--twitter"> <img src="assets/redes/tw.png" alt="">
+              <i class="ri-twitter-line"></i>
+            </a>
+            <a href="#" class="icon icon--facebook"> <img src="assets/redes/facebook.png" alt="">
+              <i class="ri-facebook-line"></i>
+            </a>
+            <a href="#" class="icon icon--youtube"><img src="assets/redes/youtube.png" alt="">
+                <i class="ri-youtube-line"></i>
+              </a>
+            <a href="#" class="icon icon--ws"><img src="assets/redes/whatsapp.png" alt="">
+              <i class="ri-ws-line"></i>
+            </a>
+          </div>
+    </section>
 
+    </div>
+
+
+</footer>
 
 </body>
 </html>
